tests/rosetta/transpiler/C/bulls-and-cows.error
compile failed: exit status 1: /tmp/ctranspile3372367894/bulls-and-cows.mochi.c: In function ‘_mem’:
/tmp/ctranspile3372367894/bulls-and-cows.mochi.c:54:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   54 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3372367894/bulls-and-cows.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3372367894/bulls-and-cows.mochi.c: In function ‘user_main’:
/tmp/ctranspile3372367894/bulls-and-cows.mochi.c:125:36: error: invalid operands to binary + (have ‘const char *’ and ‘const char *’)
  125 |     int pat = ((digits[(int)(0LL)] + digits[(int)(1LL)]) + digits[(int)(2LL)]) + digits[(int)(3LL)];
      |                 ~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~
      |                       |                    |
      |                       const char *         const char *
/tmp/ctranspile3372367894/bulls-and-cows.mochi.c:147:37: warning: passing argument 1 of ‘indexOf’ makes pointer from integer without a cast [-Wint-conversion]
  147 |             long long pos = indexOf(pat, cg);
      |                                     ^~~
      |                                     |
      |                                     int
/tmp/ctranspile3372367894/bulls-and-cows.mochi.c:82:31: note: expected ‘const char *’ but argument is of type ‘int’
   82 | long long indexOf(const char* s, const char* ch) {
      |                   ~~~~~~~~~~~~^

